project/test/semantics/unit/good/Good22_shouldEvaluateRecursiveMethodCalls.ty
mutable class Counter {
    
    variables: {
        count: Int = 0;
    }
    
    actions: {
        advanceCounter: (counter: Counter, limit: Int) -> Void = {
            this#count(this.count + 1)
            if (this.count < limit) {
                this#advanceCounter(counter, limit)
            }
        }
    }
}

singleton class WhileTest {
    
    actions: {
        main: () -> Int = {
            val counter: Counter = Counter;
            counter#advanceCounter(counter, 10)
            counter.count // 10
        }
    }
}
