project/test/semantics/unit/bad/Bad13_shouldThrowIllegalSideEffectsErrorInFunctionBodies.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        getValue: () -> Int = 50
        
        goodFunction: (param1: Int, param2: String, param3: Bool) -> Int = param1
        
        anotherGoodFunction: (param1: Int, param2: Int, param3: Int) -> Int = {
            this.var1
        }
        
        badFunction: (param1: Int, param2: Int, param3: Int) -> Int = {
            this#var1(3) // IllegalSideEffectsError
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
